# tinder

./: .gitignore  .travis.yml  README.md  SprintDos.md  SprintTres.md  SprintUno.md  app.json  config.json  index.html  package.json  params.json  server.js  startDocker.sh  travis.yml.gcov.failing
AppServer/: CMakeLists.txt  cpplint.sh  curl_install.sh  install.sh
AppServer/ar/fi/uba/concurrentes/test/: main.cpp
AppServer/ar/fi/uba/tallerii/dbaccess/: CMakeLists.txt  main.cpp
AppServer/ar/fi/uba/tallerii/files/: index.html
AppServer/ar/fi/uba/tallerii/include/: CandidatesService.h  Constant.h  Converter.h  Curl.h  CurlWrapper.h  DataBase.h  EasyCurl.h  FilterController.h  FilterService.h  MD5.h  MatchController.h  MatchService.h  MatchesController.h  MatchesService.h  Message.h  MessagesController.h  MessagesService.h  Mongoose.h  PlusController.h  (+7 more)
AppServer/cpplint/: cpplint.py
AppServer/curl-7.48.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
AppServer/curl-7.48.0/docs/: Makefile
AppServer/curl-7.48.0/docs/examples/: Makefile
AppServer/curl-7.48.0/docs/libcurl/: Makefile
AppServer/curl-7.48.0/docs/libcurl/opts/: Makefile
AppServer/curl-7.48.0/include/: Makefile
AppServer/curl-7.48.0/include/curl/: Makefile
AppServer/curl-7.48.0/lib/: Makefile  curl_config.h
AppServer/curl-7.48.0/lib/.deps/: lib1531-warnless.Po  libcurl_la-url.Plo
AppServer/curl-7.48.0/lib/.libs/: libcurl.so.4.4.0
AppServer/curl-7.48.0/scripts/: Makefile
AppServer/curl-7.48.0/src/: Makefile  curl
AppServer/curl-7.48.0/src/.libs/: curl
AppServer/curl-7.48.0/tests/: Makefile
AppServer/curl-7.48.0/tests/certs/: Makefile
AppServer/curl-7.48.0/tests/certs/scripts/: Makefile
AppServer/curl-7.48.0/tests/data/: Makefile
AppServer/curl-7.48.0/tests/libtest/: Makefile  chkhostname  lib1500  lib1501  lib1502  lib1503  lib1504  lib1505  lib1506  lib1507  lib1508  lib1509  lib1510  lib1511  lib1512  lib1513  lib1514  lib1515  lib1520  lib1525  lib1526  lib1527  lib1528  lib1529  lib1530  lib1531  lib1900  lib2033  lib500  lib501  lib502  lib503  lib504  lib505  lib506  lib507  lib508  lib509  lib510  lib511  (+68 more)
AppServer/curl-7.48.0/tests/libtest/.deps/: lib1531-first.Po  lib1531-lib1531.Po  lib1531-testutil.Po
AppServer/curl-7.48.0/tests/libtest/.libs/: lib1500  lib1501  lib1502  lib1503  lib1504  lib1505  lib1506  lib1507  lib1508  lib1509  lib1510  lib1511  lib1512  lib1513  lib1514  lib1515  lib1520  lib1525  lib1526  lib1527  lib1528  lib1529  lib1530  lib1531  lib1900  lib2033  lib500  lib501  lib502  lib503  lib504  lib505  lib506  lib507  lib508  lib509  lib510  lib511  lib512  lib513  (+66 more)
AppServer/curl-7.48.0/tests/log/: ftpserver.cmd  stderr147  trace147  valgrind147
AppServer/curl-7.48.0/tests/server/: Makefile  fake_ntlm  getpart  resolve  rtspd  sockfilt  sws  tftpd
AppServer/curl-7.48.0/tests/unit/: Makefile
AppServer/source/: CMakeLists.txt  Makefile  cmake_install.cmake
AppServer/source/include/database/: DataBase.h
AppServer/source/include/resources/: Base64.h  Location.h  Message.h  User.h
AppServer/source/include/server/: Constant.h  Request.h  Server.h
AppServer/source/include/server/Controllers/: AddDisLikeController.h  AddLikeController.h  AddMessagesController.h  GenericController.h  GetCandidatesController.h  GetFiltersController.h  GetMatchesController.h  GetMessagesController.h  GetUserInfoController.h  MatchesController.h  UpdateFiltersController.h  UpdateUserInfoController.h  UserController.h  UserLoginController.h  UserRegisterController.h
AppServer/source/include/server/Services/: CandidatesService.h  FilterService.h  MatchesService.h  MessagesService.h  PhotoService.h  UserService.h
AppServer/source/include/utils/: CurlWrapper.h  EasyCurl.h  Log.h  RandomTextGenerator.h
AppServer/source/main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
AppServer/source/src/: CMakeLists.txt  Makefile  cmake_install.cmake
AppServer/source/src/database/: CPPLINT.cfg  DataBase.cpp
AppServer/source/src/resources/: Base64.cpp  Location.cpp  Message.cpp  User.cpp
AppServer/source/src/server/: Constant.cpp  Request.cpp  RequestParser.cpp  Response.cpp  SecurityManager.cpp  Server.cpp
AppServer/source/src/server/Controllers/: AddDisLikeController.cpp  AddLikeController.cpp  AddMessagesController.cpp  FilterController.cpp  GenericController.cpp  GetCandidatesController.cpp  GetFiltersController.cpp  GetMatchesController.cpp  GetMessagesController.cpp  GetUserInfoController.cpp  MatchesController.cpp  UpdateFiltersController.cpp  UpdateUserInfoController.cpp  UserController.cpp  UserLoginController.cpp  UserRegisterController.cpp
AppServer/source/src/server/Services/: CandidatesService.cpp  FilterService.cpp  MatchesService.cpp  MessagesService.cpp  PhotoService.cpp  UserService.cpp
AppServer/source/src/utils/: Converter.cpp  CurlWrapper.cpp  Log.cpp
AppServer/source/test/: CMakeLists.txt  Makefile  adddislike_controller_test.cpp  addlike_controller_test.cpp  addmessages_controller_test.cpp  base64_test.cpp  candidates_controller_test.cpp  cmake_install.cmake  converter_test.cpp  curl_wrapper_test.cpp  database_test.cpp  filter_service_test.cpp  getmessages_controller_test.cpp  hello_test.cpp  location_test.cpp  log_wrapper_test.cpp  main.cpp  matches_controller_test.cpp  matches_service_test.cpp  messages_service_test.cpp  photo_service_test.cpp  request_test.cpp  response_test.cpp  user_register_controller_test.cpp  user_service_test.cpp  user_test.cpp  user_update_controller_test.cpp
AppServer/source/test/include/: adddislike_controller_test.h  addlike_controller_test.h  addmessages_controller_test.h  base64_test.h  candidates_controller_test.h  converter_test.h  curl_wrapper_test.h  filter_service_test.h  getmessages_controller_test.h  hello_test.h  location_test.h  log_wrapper_test.h  matches_controller_test.h  matches_service_test.h  message_test.h  photo_service_test.h  request_test.h  user_register_controller_test.h  user_service_test.h  user_test.h  user_update_controller_test.h
EjemploClion/: CMakeLists.txt
(+252 files in other folders)
